feat: Integrate FPSController, fix npm script, and refactor code for ES modules

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Local server for Canaã: Combat Zone",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2"
